--- a/Java1/First/.vscode/launch.json
+++ b/Java1/First/.vscode/launch.json
@@ -6,6 +6,41 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Demo",
+            "request": "launch",
+            "mainClass": "lesson5.Demo",
+            "projectName": "First_7b798fbc"
+        },
+        {
+            "type": "java",
+            "name": "PaymentSystem",
+            "request": "launch",
+            "mainClass": "test.PaymentSystem",
+            "projectName": "First_7b798fbc"
+        },
+        {
+            "type": "java",
+            "name": "InterfacePayableTest",
+            "request": "launch",
+            "mainClass": "test.InterfacePayableTest",
+            "projectName": "First_7b798fbc"
+        },
+        {
+            "type": "java",
+            "name": "Demo",
+            "request": "launch",
+            "mainClass": "lesson4.Demo",
+            "projectName": "First_7b798fbc"
+        },
+        {
+            "type": "java",
+            "name": "Demo2",
+            "request": "launch",
+            "mainClass": "lesson2.Demo2",
+            "projectName": "First_7b798fbc"
+        },
+        {
+            "type": "java",
             "name": "Demo2",
             "request": "launch",
             "mainClass": "Lesson2.Demo2",
