--- a/Java1/First/.vscode/launch.json
+++ b/Java1/First/.vscode/launch.json
@@ -6,6 +6,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "PaymentSystem",
+            "request": "launch",
+            "mainClass": "test.PaymentSystem",
+            "projectName": "First_6d824759"
+        },
+        {
+            "type": "java",
             "name": "Demo",
             "request": "launch",
             "mainClass": "lesson5.Demo",
